name:                njtransit-alerts
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/andreyk0/njtransit-alerts#readme
license:             BSD3
license-file:        LICENSE
author:              Andrey Kartashov
maintainer:          andrey.kartashov@gmail.com
copyright:           2016 Andrey Kartashov
category:            tool
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable njtransit-alerts
  hs-source-dirs:      .

  main-is:             Main.hs

  other-modules:       Args
                     , Alerts
                     , FCM
                     , ParseXMLFeed
                     , Types

  build-depends:       base
                     , bytestring
                     , conduit
                     , conduit-extra
                     , containers
                     , data-default
                     , fcm-client
                     , http-client
                     , http-conduit
                     , http-types
                     , lens
                     , optparse-applicative
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , xml-conduit
                     , xml-lens

  default-language:    Haskell2010

  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
